# opendalr

./: .Rbuildignore  DESCRIPTION  NAMESPACE
R/: extendr-wrappers.R  operator.R
man/: print.OpenDALMetadata.Rd  print.OpenDALOperator.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  opendalr-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-operator.R
