[package]
name = 'opendalr'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ] # Possibly cdylib for build shared libraries
name = 'opendalr'

[dependencies]
anyhow = "^1.0"
extendr-api = "0.8.0"
opendal = { version = "^0.53", default-features = false, features = [
  "services-fs",
  "services-s3",
  "services-gcs"
]}
